# 3ds-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md
app/: Cargo.toml  build.rs  run.sh
app/.helix/: languages.toml
app/assets/: Bash_3DS.mp  Bash_3DS.rkyv  vshader.pica
app/romfs/: Bash_3DS.model
app/src/: app.rs  graphics.rs  main.rs  quad.rs  util.rs
core3d/: Cargo.toml
core3d/src/: ik.rs  lib.rs
preprocessor/: Cargo.toml
preprocessor/src/: lib.rs  main.rs  model.rs  texture.rs
