[package]
name = "app"
version = "0.1.0"
edition = "2021"

[target.armv6k-nintendo-3ds]
linker = "/opt/devkitpro/devkitARM/bin/arm-none-eabi-gcc"

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs" }
citro3d = { path = "../citro3d-rs/citro3d", features = ["glam"] }
citro3d-sys = { git = "https://github.com/rust3ds/citro3d-rs" }
tobj = "4.0.2"

core3d = { path = "../core3d" }

[package.metadata.cargo-3ds]
romfs_dir = "romfs"
